k8s/nginx-ingress-class.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
  namespace: crescore
spec:
  controller: k8s.io/ingress-nginx
