k8s/auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crescore-auth
  namespace: crescore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crescore-auth
  template:
    metadata:
      namespace: crescore
      labels:
        app: crescore-auth
    spec:
      imagePullSecrets:
      - name: dockerconfigjson-github-com
      containers:
      - name: crescore-auth-container
        image: ghcr.io/kamushekdev/crescore-auth:{VERSION}
        volumeMounts:
          - name: firebase-admin-sdk
            mountPath: /app/secrets
        livenessProbe:
          initialDelaySeconds: 20
          periodSeconds: 5
          httpGet:
            path: /live
            port: 80
            scheme: HTTP
          timeoutSeconds: 2
          failureThreshold: 3
          successThreshold: 1
        readinessProbe:
          initialDelaySeconds: 20
          periodSeconds: 10
          httpGet:
            path: /health
            port: 80
            scheme: HTTP
          timeoutSeconds: 2
          failureThreshold: 3
          successThreshold: 1
        resources:
          requests:
            memory: "64Mi"
            cpu: "150m"
          limits:
            memory: "128Mi"
            cpu: "300m"
      volumes:
        - name: firebase-admin-sdk
          secret:
            secretName: firebase-admin-sdk-json
---
apiVersion: v1
kind: Service
metadata:
  name: crescore-auth-service
  namespace: crescore
  annotations:
    cloud.google.com/app-protocols: '{"grpc":"HTTP2", "http": "HTTP"}'
    service.alpha.kubernetes.io/app-protocols: '{"grpc":"HTTP2", "http": "HTTP"}'
spec:
  selector:
    app: crescore-auth
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  - name: grpc
    port: 82
    targetPort: 82
    protocol: TCP
  type: NodePort
