k8s/placeholder-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crescore-placeholer
  namespace: crescore
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: crescore-placeholer
  template:
    metadata:
      namespace: crescore
      labels:
        app: crescore-placeholer
    spec:
      imagePullSecrets:
      - name: dockerconfigjson-github-com
      containers:
      - name: crescore-placeholer-container
        image: ghcr.io/kamushekdev/placeholer:{VERSION}
        livenessProbe:
          initialDelaySeconds: 20
          periodSeconds: 5
          httpGet:
            path: /
            port: 80
            scheme: HTTP
          timeoutSeconds: 2
          failureThreshold: 3
          successThreshold: 1
        resources:
          requests:
            memory: "32Mi"
            cpu: "100m"
          limits:
            memory: "64Mi"
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: crescore-placeholer-service
  namespace: crescore
  annotations:
    cloud.google.com/app-protocols: '{"grpc":"HTTP2", "http": "HTTP"}'
    service.alpha.kubernetes.io/app-protocols: '{"grpc":"HTTP2", "http": "HTTP"}'
spec:
  selector:
    app: crescore-placeholer
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  type: NodePort
