k8s/scores-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crescore-scores
  namespace: crescore
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: crescore-scores
  template:
    metadata:
      namespace: crescore
      labels:
        app: crescore-scores
    spec:
      imagePullSecrets:
      - name: dockerconfigjson-github-com
      containers:
      - name: crescore-scores-container
        image: ghcr.io/kamushekdev/crescore-scores:{VERSION}
        livenessProbe:
          initialDelaySeconds: 20
          periodSeconds: 5
          httpGet:
            path: /live
            port: 80
            scheme: HTTP
          timeoutSeconds: 2
          failureThreshold: 3
          successThreshold: 1
        readinessProbe:
          initialDelaySeconds: 20
          periodSeconds: 10
          httpGet:
            path: /health
            port: 80
            scheme: HTTP
          timeoutSeconds: 2
          failureThreshold: 3
          successThreshold: 1
        resources:
          requests:
            memory: "64Mi"
            cpu: "150m"
          limits:
            memory: "128Mi"
            cpu: "300m"
---
apiVersion: v1
kind: Service
metadata:
  name: crescore-scores-service
  namespace: crescore
  annotations:
    cloud.google.com/app-protocols: '{"grpc":"HTTP2", "http": "HTTP"}'
    service.alpha.kubernetes.io/app-protocols: '{"grpc":"HTTP2", "http": "HTTP"}'
spec:
  selector:
    app: crescore-scores
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  - name: grpc
    port: 82
    targetPort: 82
    protocol: TCP
  type: NodePort
